Fixed header image not covering the bgcolor

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,6 @@
 .header {
   background: rgba(15, 187, 236, 0.8) url('../assets/rain.jpg') no-repeat fixed center center;
-  background-size: 100%;
+  background-size: cover;
   background-blend-mode: multiply;
   width: 100%;
   height: 500px;
